<resources>
    <string name="app_name">MobilProg_Beadando</string>
    <string name="settings_title">Beállítások</string>
    <string name="location_permission_title">Helyadat engedély</string>
    <string name="location_usage_label">Helyadat használata</string>
    <string name="location_disable_hint">A kikapcsolás a rendszer alkalmazásbeállításainál történik.</string>
    <string name="location_permission_denied">A helyadat engedély nincs megadva.</string>
    <string name="location_disable_in_settings">A helyadat engedélyt a rendszerbeállításokban tudod kikapcsolni.</string>
    <string name="language_title">Nyelv</string>
    <string name="language_hu">Magyar (HU)</string>
    <string name="language_en">Angol (EN)</string>
    <string name="temperature_unit_title">Hőmérséklet mértékegység</string>
    <string name="temperature_celsius">Celsius (°C)</string>
    <string name="temperature_fahrenheit">Fahrenheit (°F)</string>
    <string name="save_settings">Beállítások mentése</string>
    <string name="settings_saved">Beállítások mentve.</string>
    <string name="nav_home">Főoldal</string>
    <string name="nav_history">Napló</string>
    <string name="nav_statistics">Statisztika</string>
    <string name="nav_settings">Beállítások</string>
    <string name="home_how_feel_today">Hogy érzed ma magad?</string>
    <string name="home_already_selected_today">Ma már választottál hangulatot.</string>
    <string name="home_mood_result_1">Ma szomorú vagy</string>
    <string name="home_mood_result_2">Ma rossz kedved van</string>
    <string name="home_mood_result_3">Ma átlagos napod van</string>
    <string name="home_mood_result_4">Ma jó kedved van</string>
    <string name="home_mood_result_5">Ma nagyon boldog vagy</string>
    <string name="history_title">Naplólista</string>
    <string name="history_search_hint">Keresés dátum szerint (pl. 2026.03.01)</string>
    <string name="history_apply_filter">Szűrés</string>
    <string name="history_clear_filters">Szűrők törlése</string>
    <string name="history_delete_entry">Bejegyzés törlése</string>
    <string name="history_delete_confirm_title">Törlés megerősítése</string>
    <string name="history_delete_confirm_message">Valóban törölni szeretnéd ezt a bejegyzést?</string>
    <string name="history_delete_confirm">Igen, törlöm</string>
    <string name="history_delete_cancel">Mégse</string>
    <string name="history_filter_all_moods">Összes hangulat</string>
    <string name="history_mood_1">😢 Szomorú</string>
    <string name="history_mood_2">☹️ Rossz</string>
    <string name="history_mood_3">😐 Átlagos</string>
    <string name="history_mood_4">🙂 Jó</string>
    <string name="history_mood_5">😄 Nagyon jó</string>
    <string name="history_mood_label">Hangulat: %1$s</string>
    <string name="history_weather_line">%1$s, %2$s, %3$s</string>
    <string name="stats_title">Statisztika</string>
    <string name="stats_weekly_average">Heti hangulat átlag</string>
    <string name="stats_best_weather">Leggyakoribb jó hangulat időjárás</string>
    <string name="stats_distribution">Hangulat eloszlás</string>
    <string name="stats_temperature_avg">Átlag hangulat hőmérséklet szerint</string>
    <string name="stats_no_entries">Még nincs mentett naplóbejegyzés a statisztikához.</string>
    <string name="stats_loaded">A statisztika a mentett naplóbejegyzésekből készült.</string>
    <string name="stats_load_failed">Nem sikerült betölteni a statisztikát.</string>
    <string name="stats_no_last_7_days">Nincs adat az elmúlt 7 napból</string>
    <string name="stats_weekly_avg_value">%1$.2f / 5</string>
    <string name="stats_distribution_dataset">Hangulat eloszlás</string>
    <string name="stats_no_good_mood_data">Nincs még elég jó hangulatú adat</string>
    <string name="stats_no_evaluable_data">Nincs értékelhető adat</string>
    <string name="stats_best_weather_value">%1$s (%2$d alkalom)</string>
    <string name="stats_bucket_0_5">0-5°C</string>
    <string name="stats_bucket_6_15">6-15°C</string>
    <string name="stats_bucket_16_25">16-25°C</string>
    <string name="stats_bucket_26_plus">26°C+</string>
    <string name="stats_bucket_summary_item">%1$s: %2$.2f</string>
    <string name="stats_no_temp_data">Nincs elég adat hőmérséklet szerinti átlaghoz</string>
    <string name="stats_avg_mood_dataset">Átlag hangulat</string>
    <string name="widget_title">Mai gyorsnapló</string>
    <string name="widget_today_mood_not_set">Mai hangulat: még nincs kiválasztva</string>
    <string name="widget_today_mood_value">Mai hangulat: %1$s</string>
    <string name="widget_temperature_label">Hőmérséklet: %1$s</string>
    <string name="widget_weather_label">Időjárás: %1$s</string>
    <string name="widget_quick_mood_title">Gyors hangulatválasztás:</string>
</resources>