<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/firstFragment">

    <fragment
        android:id="@+id/firstFragment"
        android:name="com.example.mobilprog_beadando.FirstFragment"
        android:label="@string/nav_home" >
    </fragment>

    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.mobilprog_beadando.SecondFragment"
        android:label="@string/nav_history" />

    <fragment
        android:id="@+id/thirdFragment"
        android:name="com.example.mobilprog_beadando.ThirdFragment"
        android:label="@string/nav_statistics" />

    <fragment
        android:id="@+id/fourthFragment"
        android:name="com.example.mobilprog_beadando.FourthFragment"
        android:label="@string/nav_settings" />

</navigation>